<?xml version="1.0"?>
<package format="2">
  <name>fingervision_msgs</name>
  <version>0.0.0</version>
  <description>Message and service definitions for fingervision.</description>
  <author email="info@akihikoy.net">Akihiko Yamaguchi</author>
  <maintainer email="info@akihikoy.net">Akihiko Yamaguchi</maintainer>
  <license>Described in LICENSE</license>
  <url>http://akihikoy.net/p/fv</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
